--- a/MDFast/packages.config
+++ b/MDFast/packages.config
@@ -3,6 +3,7 @@
   <package id="Caliburn.Micro" version="3.1.0" targetFramework="net461" />
   <package id="Caliburn.Micro.Core" version="3.1.0" targetFramework="net461" />
   <package id="CommonServiceLocator" version="1.3" targetFramework="net451" />
+  <package id="Dragablz" version="0.0.3.186" targetFramework="net461" />
   <package id="FluentValidation" version="6.4.0-beta9" targetFramework="net461" />
   <package id="Fody" version="1.29.2" targetFramework="net461" developmentDependency="true" />
   <package id="MahApps.Metro" version="1.4.1" targetFramework="net461" />
