--- a/FiscaliZi.Colinfo/FiscaliZi.Colinfo.csproj
+++ b/FiscaliZi.Colinfo/FiscaliZi.Colinfo.csproj
@@ -294,6 +294,9 @@
     <Compile Include="Assets\Dialog_ErroConsulta.xaml.cs">
       <DependentUpon>Dialog_ErroConsulta.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Assets\Dialog_PedMin.xaml.cs">
+      <DependentUpon>Dialog_PedMin.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Assets\NotifyMessage.cs" />
     <Compile Include="ColinfoContext.cs" />
     <Compile Include="Migrations\20170418014929_mig.cs" />
@@ -363,6 +366,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Assets\Dialog_ErroConsulta.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Assets\Dialog_PedMin.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
