--- a/FiscaliZi.Colinfo/packages.config
+++ b/FiscaliZi.Colinfo/packages.config
@@ -8,6 +8,8 @@
   <package id="MaterialDesignColors" version="1.1.3" targetFramework="net461" />
   <package id="MaterialDesignThemes" version="2.3.0.823" targetFramework="net461" />
   <package id="MaterialDesignThemes.MahApps" version="0.0.10" targetFramework="net461" />
+  <package id="Microsoft.AppCenter" version="2.1.1" targetFramework="net461" />
+  <package id="Microsoft.AppCenter.Push" version="2.1.1" targetFramework="net461" />
   <package id="Microsoft.AspNetCore.Hosting.Abstractions" version="1.1.0" targetFramework="net461" />
   <package id="Microsoft.AspNetCore.Hosting.Server.Abstractions" version="1.1.0" targetFramework="net461" />
   <package id="Microsoft.AspNetCore.Http.Abstractions" version="1.1.0" targetFramework="net461" />
@@ -30,9 +32,17 @@
   <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="net461" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net461" />
   <package id="NETStandard.Library" version="1.6.1" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="6.0.1" targetFramework="net461" />
   <package id="Npgsql" version="3.2.1" targetFramework="net461" />
   <package id="Npgsql.EntityFrameworkCore.PostgreSQL" version="1.1.0" targetFramework="net461" />
   <package id="Remotion.Linq" version="2.1.1" targetFramework="net461" />
+  <package id="sqlite-net-pcl" version="1.3.1" targetFramework="net461" />
+  <package id="SQLitePCLRaw.bundle_green" version="1.1.2" targetFramework="net461" />
+  <package id="SQLitePCLRaw.core" version="1.1.2" targetFramework="net461" />
+  <package id="SQLitePCLRaw.lib.e_sqlite3.linux" version="1.1.2" targetFramework="net461" />
+  <package id="SQLitePCLRaw.lib.e_sqlite3.osx" version="1.1.2" targetFramework="net461" />
+  <package id="SQLitePCLRaw.lib.e_sqlite3.v110_xp" version="1.1.2" targetFramework="net461" />
+  <package id="SQLitePCLRaw.provider.e_sqlite3.net45" version="1.1.2" targetFramework="net461" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net461" />
   <package id="System.Collections" version="4.3.0" targetFramework="net461" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="net461" />
